# Jawas-avc

./: .~lock.AVC Plan.odt#  AVC Plan.odt  ArthurHelp  CMakeLists.txt  ENGR101_2016_AVCReportTemplate(2).odt  ENGR101_2016_AVCReportTemplate.docx  Master_Code.c  PROTOTYPE.c  Quick Reference Guide.odt  README.md  Things to consider  camera_reading.c  lt.cpp  lt_PiCode.cpp  makefile  motor_go_straight.c  motor_turn_test.c
Hardware/: Readme  Wheel Hub.stl
Hardware/Parts-master/: Axel.fcstd  Axel.fcstd1  Camera hold Uncut.FCStd  Camera_holderv2.stl  IR bracket.stl  L Bracket (Not Sized Or Connected).FCStd  L Bracket (connected).FCStd  L Bracket 2 (Not Sized Or Connected).FCStd  L Bracket 2 (Sized and Connected).FCStd  L Bracket 2 (connected).FCStd  L Bracket for battery (Not Sized Or Connected).FCStd  L Bracket for battery.stl  Support as of 13th of May.stl  cam_holdv2.stl  cameraHold Edited.stl  cameraHold2.fcstd  cameraHold2.fcstd1  camera_hold2.stl  freewheel bracket.stl  stand25.stl  stick cylinder.stl  support connected.stl  wheel axel.stl  wheel bracketv2.stl
Software/: Derivative_Ideas.c  Readme  camera_reading.c  infrared_motor_op.c  motor_turn_test.c  skeleton_code.c
